fix:replace HttpClient with HttpURLConnection for JDK 8 compatibility. (#1709)